Fix problem with non-working Value annotation